trunk/Archive2/c5/7aeeac095a78a3/output
main.cpp:5:12: error: conflicting declaration 'const auto x'
 auto const x = X{};
            ^
main.cpp:3:16: note: previous declaration as 'const X x'
 extern X const x;
                ^
