trunk/Archive2/c5/7aeeac095a78a3/main.cpp
struct X { };

extern X const x;

auto const x = X{};

int main()
{
}